javascript-assignment/final-assignment/html-to-markdown/styles/layout.css
.header {
    background-color: #9933cc;
    color: #ffffff;
    padding: 15px;
    font-size: 12px;
}

.container {
    width: 1170px;
    margin: 0 auto;
}

.label {
    padding: 15px 0;
}

.raw {
    padding: 15px 0;
}

.row::after {
    content: "";
    clear: both;
    display: table;
}

[class*="col-"] {
    float: left;
    padding: 15px;
}

[class*="col-"] {
    width: 100%;
}

textarea {
    width: 100%;
    outline: 1px solid gray;
    resize: none;
    float: left;
    min-height: 100%;
}

button {
    margin-top: 5px;
    border-radius: 10px;
    cursor: pointer;
    color: #fff;
    background-color: #5cb85c;
    border-color: #4cae4c;
}

#markdown {
    display: block;
}

section {
    height: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
    display: none;
}

/*for desktop*/
@media only screen and (min-width: 992px) {
    .col-1 {
        width: 8.33%;
    }

    .col-2 {
        width: 16.66%;
    }

    .col-3 {
        width: 25%;
    }

    .col-4 {
        width: 33.33%;
    }

    .col-5 {
        width: 41.66%;
    }

    .col-6 {
        width: 50%;
    }

    .col-7 {
        width: 58.33%;
    }

    .col-8 {
        width: 66.66%;
    }

    .col-9 {
        width: 75%;
    }

    .col-10 {
        width: 83.33%;
    }

    .col-11 {
        width: 91.66%;
    }

    .col-12 {
        width: 100%;
    }
}

